Fix the content visibility issue

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -506,6 +506,9 @@
 .content-vis-auto {
     content-visibility: auto;
 }
+.content-vis-default {
+    content-visibility: visible;
+}
 
 .full-bleed-wrapper {
     --padding: 1.125rem;
